- Cleared out the unnecessary property settings from the css. - Fixed the top menu to fill in the gap below the items properly.

--- a/main/static/css/mq_600-plus.css
+++ b/main/static/css/mq_600-plus.css
@@ -1,5 +1,3 @@
-/* disable menu in footer */
-/* on large devices, menu is displayed in header */
 /* nm = nav mobile */
 .nm {
     display: none;
@@ -26,38 +24,17 @@ header {
     align-items: center;
 }
 
-/* logo: THE ENDLESS JOURNEY */
 #logo {
     width: 100%;
-
     /*
-    this grows the element to fill in vertical space
-    #logo will grow 4x as much as .nd
+    Resetting the height for better spacing of the top menu.
     */
-    flex-grow: 4;
+    height: 0%;
+}
 
-    /*
-    "height: 100%" was set on #logo in main.css
-    we need to set "flex-basis: 0" to override this
-    */
-    flex-basis: 0;
-}
-#take_action_container_text {
-	font-weight: 300;
-	font-size: 3.5rem;
-}
 /* nd = nav desktop */
 .nd {
     width: 100%;
-
-    /*
-    with #logo and .nd both set to "flex-grow"
-    they will both grow along the flex container's primary axis
-    in this case, the vertical axis
-    they will fill in the space in the header along vertical axis
-    #logo will grow 4x as much as .nd
-    */
-    flex-grow: 1;
 
     /* container of some dimension */
     /* this is important for contained elements */
@@ -65,18 +42,12 @@ header {
 
     /* arrange li elements horizontally */
     display: flex;
-    /* horizontally distribute "space around" li elements */
-    justify-content: space-around;
-    /* vertically center li elements */
-    align-items: center;
-
+    
     /* font format */
     color: white;
     font-size: 1.4rem;
     letter-spacing: 1px;
-    text-decoration: none;
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
 }
 
 .nd li {
@@ -87,11 +58,6 @@ header {
 
     /* have each li element grow horizontally */
     flex-grow: 1;
-
-    /* center the anchor elements */
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .nd li a {
@@ -100,26 +66,20 @@ header {
     /* must be in container of some dimension */
     height: 100%;
 
-    /* grow horizontally */
-    flex-grow: 1;
-
     /* center the text wrapped by the anchor elements */
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #ffffff;
+    color: #fff;
 }
 
 .nd li a:hover {
     background-color: deepskyblue;
 }
 
-/* ------------------------------------------- */
-/* BELOW THE FOLD (btf) */
-/* ------------------------------------------- */
-
-.btf-articles article {
-    width: 50%;
+#take_action_container_text {
+	font-weight: 300;
+	font-size: 3.5rem;
 }
 
 footer {
